# SpacePirates

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Color.cpp  Color.h  GameObject.cpp  GameObject.h  Gold.cpp  Gold.h  Graphics.cpp  Graphics.h  INSTALL  Image.cpp  Image.h  Input.cpp  Input.h  LICENSE  Level.cpp  Level.h  Platform.cpp  Platform.h  Point.h  README.md  RigidBody.cpp  RigidBody.h  Ship.cpp  Ship.h  SpacePirates.sln  SpacePirates.vcxproj  SpacePirates.vcxproj.filters  Texture.cpp  Texture.h  Time.cpp  Time.h  i.xcf  main.cpp  makefile  winmain.cpp
debian/: control  rules  spacepirates.dirs
