cmake_minimum_required(VERSION 2.6)
project(SpacePirates)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
   message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different 	C++ compiler.")
endif()

# Find cmake modules like FindSDL2.cmake, etc
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${SpacePirates_SOURCE_DIR}/cmake")

# Get SDL2 libs
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
include_directories(${SDL2_TTF_INCLUDE_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

file(GLOB SpacePirates_SRC
    "*.h"
    "*.cpp"
)

add_executable(SpacePirates ${SpacePirates_SRC})

target_link_libraries(SpacePirates ${SDL2_LIBRARY})
target_link_libraries(SpacePirates ${SDL2_TTF_LIBRARY})

add_custom_command(TARGET SpacePirates POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/levels ${CMAKE_BINARY_DIR}/levels
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/ships ${CMAKE_BINARY_DIR}/ships
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/DejaVuSans-ExtraLight.ttf ${CMAKE_BINARY_DIR}/DejaVuSans-ExtraLight.ttf
)
